--- a/ponkikki_leap/index.html
+++ b/ponkikki_leap/index.html
@@ -38,6 +38,8 @@
     <canvas class='canvas-base' id="mask-canvas"></canvas>
     <div class='stat-circle' id='stat-circle'></div>
     <div class='logo' id='logo'></div>
+    <div class='text' id='text'></div>
+    <div class='returntext' id='returntext'>手をかざすと戻ります</div>
 
     <div class='ui' id='ui'>
         <div class='carib-circle carib-elem' id='carib-circle-1'>0</div>
